# opencv-learn

./: CMakeLists.txt  main.cpp
